Now we can see the content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="js/jquery/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/jszip/dist/jszip.js"></script>
+	<script type="text/javascript" src="js/jszip-utils/dist/jszip-utils.js"></script>
 	<script type="text/javascript" src="js/jszip/vendor/fileSaver.js"></script>
 	<script src="js/jscolor/jscolor.min.js"></script>
 </head>
@@ -89,6 +90,7 @@
 				</div>
 
 				<!-- <button class="btn blue" onclick="changeColorsText()">valider</button> -->
+				<span id="getCss"></span>
 			</div>
 		</div>
 	</section>
