previsualisation dynamic color changes

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
 							<h1 id="visTitle">harmony</h1>
 							<p id="visParag">paragraphe ? c'est ici que ça se passe :)</p>
 						</div>
+
+						<div class="hr-bloc-generate">
+							<button class="btn green btn-large" onclick="validateStyle()">valider</button>
+						</div>
 					</div>
 				</div>
 				
