--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 	</section>
 	<script type="text/javascript" src="js/harmony.js"></script>
 	<script type="text/javascript" src="js/harmonyZip.js"></script>
+	<button onclick="test()">AAAAAAAAAA</button>
 </body>
 
 </html>
