Remove import zip file, working on how to get zip file, open, fetch, edit and compress new skinpack

--- a/edit.html
+++ b/edit.html
@@ -19,11 +19,13 @@
 		<div class="container">
 			<div class="bloc-harmony-head" id="pg-home">
 				<h2>Harmony</h2>
-<!-- 			<div class="bloc-import">
+				<div class="bloc-import">
 					<input id ="skin-rep" type="file" class="hide" onchange="getSkinPack()">
 					<label for="skin-rep" class="skin-lbl-import btn blue">Importez votre skinpack</label>
 					<span class="valide-skin-msg" id="msgSkinpackImportation"></span>
-				</div> -->
+					<!-- <span class="invalide-skin-msg" id="errorZip"></span> -->
+					<span id="show"></span>
+				</div>
 			</div>
 			<div class="bloc-harmony" id="pg-colors">
 				
