writing on skin and main

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 							<div class="bloc-harmony-inside">
 								<label for="label-title-color">Couleur principale</label>
-								<input class="jscolor" id="hrColorPrincipale" onchange="getChangeColor1()">
+								<input class="jscolor" id="hrColorPrincipale" onchange="getChangeColor1(this.value)">
 							</div>
 
 							<div class="bloc-harmony-inside">
