--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
 		<div class="container">
 			<div class="bloc-harmony-head" id="pg-home">
 				<h2>Harmony</h2>
-<!-- 			<div class="bloc-import">
-					<input id ="skin-rep" type="file" class="hide" onchange="getSkinPack()">
-					<label for="skin-rep" class="skin-lbl-import btn blue">Importez votre skinpack</label>
-					<span class="valide-skin-msg" id="msgSkinpackImportation"></span>
-				</div> -->
 			</div>
 			<div class="bloc-harmony" id="pg-colors">
-				
+				<div class="hr-bloc-param-xml">
+					<div class="hr-sub-elem">
+						<h2>Informations</h2>
+					</div>
+				</div>
 				<div class="hr-bloc-customize-color">
 					<div class="hr-sub-elem">
 						<!-- Les couleurs -->
@@ -73,7 +72,6 @@
 				<div class="hr-bloc-customize-text">
 					<div class="hr-sub-elem">
 						<h2>Textes et typo</h2>
-
 						<div class="hr-subsub-elem">
 							<h1>Police</h1>
 							<div class="bloc-harmony-inside">
