modify font family

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							</div>
 						</div>
 
-						<div class="hr-subsub-elem">
+<!-- 						<div class="hr-subsub-elem">
 							<h1>Couleurs des textes</h1>
 							<div class="bloc-harmony-inside">
 								<label for="hrColorTitle">Titres</label>
@@ -124,7 +124,7 @@
 								<label for="hrColorPargraph">Paragraphes</label>
 								<input class="jscolor {refine:false} hr-input" id="hrColorPargraph" onchange="getChangeColorText()">
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<div class="hr-bloc-customize-img">
